--- a/index.html
+++ b/index.html
@@ -4,13 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangladesh 2.0 Assignment</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body id="all-page">
     <header>
         <nav>
-            <h2>Bangladesh 2.0</h2>
-            <button><a href="#">Sign In</a></button>
+            <div class="nav-content">
+                <h2>Bangladesh 2.0</h2>
+                <button><a href="#">Sign In</a></button>
+            </div>
         </nav>
+        <section id="hero-section">
+            <div class="hero-container">
+                <div class="hero-content">
+                    <p>Bangladesh 2.0</p>
+                    <h1>Idea , innovation , <br>
+                        vision and challenges in <br>New Bangladesh.
+                    </h1>
+                    <button><a href="#">Explore New Bangladesh</a></button>
+                </div>
+                <div class="hero-png">
+                    <img src="./assets/hero.png" alt="">
+                </div>
+            </div>
+
+        </section>
     </header>
     <main>
 
