nav section added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <div class="nav-content">
                 <h2>Bangladesh 2.0</h2>
-                <button><a href="#">Sign In</a></button>
+                <button class="btn"><a href="#">Sign In</a></button>
             </div>
         </nav>
         <section id="hero-section">
@@ -21,7 +21,7 @@
                     <h1>Idea , innovation , <br>
                         vision and challenges in <br>New Bangladesh.
                     </h1>
-                    <button><a href="#">Explore New Bangladesh</a></button>
+                    <button class="btn"><a href="#">Explore New Bangladesh</a></button>
                 </div>
                 <div class="hero-png">
                     <img src="./assets/hero.png" alt="">
