--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangladesh 2.0 Assignment</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body id="all-page">
     <header>
         <nav>
@@ -30,11 +32,46 @@
 
         </section>
     </header>
-    <main>
-
+    <main id="main-section">
+        <section class="pillar-of-bd">
+            <div>
+                <h3>Pillars of "Bangladesh 2.0"</h3>
+            </div>
+            <div class="pillar-container">
+                <div class="pillar">
+                    <div>
+                        <img src="assets/card-icon.png" alt="">
+                        <h4>Innovation</h4>
+                        <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    </div>
+                </div>
+                <div class="pillar">
+                    <div>
+                        <img src="assets/card-icon.png" alt="">
+                        <h4>Innovation</h4>
+                        <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    </div>
+                </div>
+                <div class="pillar">
+                    <div>
+                        <img src="assets/card-icon.png" alt="">
+                        <h4>Innovation</h4>
+                        <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    </div>
+                </div>
+                <div class="pillar">
+                    <div>
+                        <img src="assets/card-icon.png" alt="">
+                        <h4>Innovation</h4>
+                        <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
