visition section added

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
     <main id="main-section">
         <section class="pillar-of-bd">
-            <div>
+            <div class="card-title">
                 <h3>Pillars of "Bangladesh 2.0"</h3>
             </div>
             <div class="pillar-container">
@@ -66,6 +66,43 @@
                         <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section id="vision">
+            <div class="future-title">
+                <h3>The Vision of Future</h3>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <div>
+                        <img src="assets/card-icon.png" alt="">
+                        <h4>Digital Transformation</h4>
+                        <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                        <button class="btn">Learn More</button>
+                    </div>
+                </div>
+                <div class="card card-2">
+                    <div>
+                        <img src="assets/card-icon.png" alt="">
+                        <h4>Digital Transformation</h4>
+                        <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                        <button class="btn btn-2">Learn More</button>
+                    </div>
+                </div>
+                <div class="card card-3">
+                    <div>
+                        <img src="assets/card-icon.png" alt="">
+                        <h4>Digital Transformation</h4>
+                        <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                        <button class="btn btn-3">Learn More</button>
+                    </div>
+                </div>
+            </div>
+            <div class="description-of-vision">
+                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p>
+                <h4>Dr. Muhammad Yunus</h4>
+                <p>Chief Adviser of the People's Republic of Bangladesh</p>
             </div>
         </section>
     </main>
