donation section added

--- a/index.html
+++ b/index.html
@@ -238,8 +238,27 @@
                 </div>
             </div>
         </section>
+
+        <!-- Donate section -->
+         <section class="donate-section">
+            <div class="section-title">
+                <h3>Donate Today</h3>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+            </div>
+            <div class="money-container">
+                    <h3 class="money-card">100 Taka</h3>
+                    <h3 class="money-card" style="background-color: #C6E4D6; color: rgba(14, 14, 14, 0.8);">100 Taka</h3>
+                    <h3 class="money-card">100 Taka</h3>
+                    <h3 class="money-card">100 Taka</h3>
+            </div>
+            <input type="number" name="" placeholder="Other Amount (Taka)" id="">
+            <br><br>
+            <div style="text-align: center;">
+                <button class="btn btn-4"><a href="#" style="text-decoration: none; color: #ffffff;">Done Now</a></button>
+            </div>
+         </section>
     </main>
-    <footer>
+    <footer class="footer main-section">
 
     </footer>
 </body>
