added newslatter section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangladesh 2.0 Assignment</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body id="all-page">
@@ -195,7 +196,8 @@
                     <p>Not until the creation and maintenance of decent conditions of life for all people are recognized
                         and accepted as a common obligation of all people and all countries—not until then shall we,
                         with a certain degree of justification, be able to speak of humankind as civilized</p>
-                    <button class="btn btn-4"><a href="#" style="text-decoration: none; color: #ffffff;">Read More</a></button>
+                    <button class="btn btn-4"><a href="#" style="text-decoration: none; color: #ffffff;">Read
+                            More</a></button>
 
                 </div>
             </div>
@@ -211,7 +213,8 @@
                     <p>Not until the creation and maintenance of decent conditions of life for all people are recognized
                         and accepted as a common obligation of all people and all countries—not until then shall we,
                         with a certain degree of justification, be able to speak of humankind as civilized</p>
-                    <button class="btn btn-4"><a href="#" style="text-decoration: none; color: #ffffff;">Read More</a></button>
+                    <button class="btn btn-4"><a href="#" style="text-decoration: none; color: #ffffff;">Read
+                            More</a></button>
 
                 </div>
                 <div class="satellite-img">
@@ -233,33 +236,59 @@
                     <p>Not until the creation and maintenance of decent conditions of life for all people are recognized
                         and accepted as a common obligation of all people and all countries—not until then shall we,
                         with a certain degree of justification, be able to speak of humankind as civilized</p>
-                    <button class="btn btn-4"><a href="#" style="text-decoration: none; color: #ffffff;">Read More</a></button>
+                    <button class="btn btn-4"><a href="#" style="text-decoration: none; color: #ffffff;">Read
+                            More</a></button>
 
                 </div>
             </div>
         </section>
 
         <!-- Donate section -->
-         <section class="donate-section">
+        <section class="donate-section">
             <div class="section-title">
                 <h3>Donate Today</h3>
-                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
+                    promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy,
+                    digital transformation, and robust infrastructure.</p>
             </div>
             <div class="money-container">
-                    <h3 class="money-card">100 Taka</h3>
-                    <h3 class="money-card" style="background-color: #C6E4D6; color: rgba(14, 14, 14, 0.8);">100 Taka</h3>
-                    <h3 class="money-card">100 Taka</h3>
-                    <h3 class="money-card">100 Taka</h3>
+                <h3 class="money-card">100 Taka</h3>
+                <h3 class="money-card" style="background-color: #C6E4D6; color: rgba(14, 14, 14, 0.8);">100 Taka</h3>
+                <h3 class="money-card">100 Taka</h3>
+                <h3 class="money-card">100 Taka</h3>
             </div>
             <input type="number" name="" placeholder="Other Amount (Taka)" id="">
             <br><br>
             <div style="text-align: center;">
-                <button class="btn btn-4"><a href="#" style="text-decoration: none; color: #ffffff;">Done Now</a></button>
+                <button class="btn btn-4"><a href="#" style="text-decoration: none; color: #ffffff;">Done
+                        Now</a></button>
             </div>
-         </section>
-    </main>
-    <footer class="footer main-section">
+        </section>
 
+        <!-- Newsletter Section  -->
+        <section class="Newsletter-section">
+            <div class="Newsletter-container section-title">
+                <form action="">
+                    <h3>Subscribe Newsletter</h3>
+                    <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br>technology,
+                        promoting
+                        inclusive growth.</p>
+                    <input type="email" name="" id="" placeholder="Enter your email here" required>
+                    <button class="btn">Subscribe</button>
+                    <br><br>
+                    <p>We promise not to spam you!</p>
+                </form>
+    
+            </div>
+        </section>
+    </main>
+    <footer>
+        <h3>Bangladesh 2.0</h3>
+        <ul>
+            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+        </ul>
     </footer>
 </body>
 
