--- a/index.html
+++ b/index.html
@@ -283,12 +283,15 @@
         </section>
     </main>
     <footer>
-        <h3>Bangladesh 2.0</h3>
-        <ul>
-            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-        </ul>
+        <div class="footer-content">
+            <h3>Bangladesh 2.0</h3>
+            <hr>
+            <ul>
+                <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 
