--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body id="all-page">
-    <header>
+    <header class="">
         <nav>
             <div class="nav-content">
                 <h2>Bangladesh 2.0</h2>
@@ -69,7 +69,7 @@
                 </div>
             </div>
         </section>
-        <section id="vision">
+        <section id="vision" class="">
             <div class="section-title">
                 <h3>The Vision of Future</h3>
                 <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
@@ -119,7 +119,7 @@
         </section>
 
         <!-- Your Opinion Matter -->
-        <section>
+        <section class="hide Done">
             <div id="Opinion-section">
                 <div class="section-title">
                     <h3>Your Opinion Matters</h3>
@@ -173,7 +173,7 @@
         </section>
 
         <!-- Recent News -->
-        <section id="recent-news">
+        <section id="recent-news" class="">
             <div class="section-title">
                 <h3>Recent News</h3>
                 <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
@@ -244,7 +244,7 @@
         </section>
 
         <!-- Donate section -->
-        <section class="donate-section">
+        <section class="donate-section ">
             <div class="section-title">
                 <h3>Donate Today</h3>
                 <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
@@ -266,7 +266,7 @@
         </section>
 
         <!-- Newsletter Section  -->
-        <section class="Newsletter-section">
+        <section class="Newsletter-section ">
             <div class="Newsletter-container section-title">
                 <form action="">
                     <h3>Subscribe Newsletter</h3>
@@ -282,7 +282,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="">
         <div class="footer-content">
             <h3>Bangladesh 2.0</h3>
             <hr>
